[gd_scene load_steps=17 format=3 uid="uid://cmx1ur1ldwu0r"]

[ext_resource type="PackedScene" uid="uid://bfj5yk1srxw22" path="res://components/physics/VelocityComponent.tscn" id="1_tqken"]
[ext_resource type="Script" path="res://scripts/Ennemy.gd" id="1_x4624"]
[ext_resource type="Script" path="res://resources/effects/hurt/DisplayDamagedHurtEffect.gd" id="2_3q62j"]
[ext_resource type="PackedScene" uid="uid://b26iygcwph1nu" path="res://components/HealthComponent.tscn" id="2_ld3i1"]
[ext_resource type="PackedScene" uid="uid://b5iiqlwia7sr7" path="res://components/physics/HitboxComponent.tscn" id="3_fwp5m"]
[ext_resource type="Script" path="res://resources/effects/hurt/BlinkHurtEffect.gd" id="3_p07ye"]
[ext_resource type="Script" path="res://resources/effects/custom/FallDownEffect.gd" id="3_tsrxm"]
[ext_resource type="PackedScene" uid="uid://ba7h2fb8j5vre" path="res://components/physics/HurtboxComponent.tscn" id="4_0tr1k"]
[ext_resource type="Script" path="res://resources/effects/custom/DropXpResource.gd" id="4_r6j5t"]
[ext_resource type="Script" path="res://resources/effects/hurt/ThrowParticulesHurtEffect.gd" id="4_tf3yn"]
[ext_resource type="Resource" uid="uid://cnc58o31w371e" path="res://resources/stats/custom/ennemies/bat/ennemy_stat_controller_entity.tres" id="5_3ci05"]
[ext_resource type="PackedScene" uid="uid://b1navm80qbjks" path="res://components/FollowTargetComponent.tscn" id="9_h7ic3"]
[ext_resource type="PackedScene" uid="uid://bq8wq02iaxh0b" path="res://assets/characters/ennemies/32x32-bat-sprite.ase" id="12_uwsxo"]
[ext_resource type="Script" path="res://components/WeaponSlotComponent.gd" id="14_yktyk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jaqne"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_sth8j"]
radius = 6.0

[node name="Ennemy" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
collision_layer = 2
collision_mask = 2
motion_mode = 1
slide_on_ceiling = false
floor_constant_speed = true
script = ExtResource("1_x4624")
hurt_effects = Array[Resource]([ExtResource("2_3q62j"), ExtResource("3_p07ye"), ExtResource("4_tf3yn")])
die_effects = Array[Resource]([ExtResource("3_tsrxm"), ExtResource("4_r6j5t")])
stats_controller = ExtResource("5_3ci05")

[node name="VelocityComponent" parent="." instance=ExtResource("1_tqken")]
MAX_SPEED = 80.0
SPEED_FACTOR = 35.0

[node name="HitboxComponent" parent="." instance=ExtResource("3_fwp5m")]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_jaqne")

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_0tr1k")]
shape = SubResource("CircleShape2D_sth8j")
one_way_collision_margin = 16.0
health_component = NodePath("../HealthComponent")

[node name="HealthComponent" parent="." instance=ExtResource("2_ld3i1")]

[node name="SpriteComponent" parent="." instance=ExtResource("12_uwsxo")]
scale = Vector2(0.5, 0.5)

[node name="FollowTargetComponent" parent="." node_paths=PackedStringArray("velocity_component") instance=ExtResource("9_h7ic3")]
velocity_component = NodePath("../VelocityComponent")

[node name="WeaponSlotComponent" type="Node2D" parent="."]
script = ExtResource("14_yktyk")
collision_layer = 8
collision_mask = 4
